feat: 작업 등록 활성화 및 비활성화 삭제 추가